# 2d-game

./: .gitignore  CMakeLists.txt
include/: Config.h
scripts/: catan_board.lua  config.lua  scene.lua  space_ship.lua
src/: Animation.cpp  Animation.h  Collusion.cpp  Collusion.h  Config.cpp  Config.h  Config.h.in  Game.cpp  Game.h  Scene.cpp  Scene.h  SceneFactory.cpp  SceneFactory.h  Sprite.cpp  Sprite.h  main.cpp
